--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,20 +1,3 @@
-.side-panel{
-    grid-area: sidepanel;
-    background-color: aquamarine;
-    padding-left: 20px;
-}
-.music-player-content{
-    grid-area:musicplayer;
-    background-color: yellow;
-}
-/* .music-player-content{
-    grid-area:musicplayer;
-} */
-footer{
-    grid-area: footer;
-    background-color: violet;
-    height: auto;
-}
 
 body{
     display: grid;
@@ -22,29 +5,70 @@ body{
     grid-template-rows: auto;
     grid-template-columns: repeat(5,20%);
     grid-template-areas: 
-    "sidepanel musicplayer musicplayer musicplayer musicplayer"
-    "sidepanel musicplayer musicplayer musicplayer musicplayer"
-    "sidepanel musicplayer musicplayer musicplayer musicplayer"
-    "sidepanel musicplayer musicplayer musicplayer musicplayer"
-    "sidepanel musicplayer musicplayer musicplayer musicplayer"
-    "sidepanel musicplayer musicplayer musicplayer musicplayer"
+    "sidepanel  musicplayer musicplayer musicplayer musicplayer"
+    "sidepanel  musicplayer musicplayer musicplayer musicplayer"
+    "sidepanel  musicplayer musicplayer musicplayer musicplayer"
+    "sidepanel  musicplayer musicplayer musicplayer musicplayer"
+    "sidepanel  musicplayer musicplayer musicplayer musicplayer"
+    "sidepanel  musicplayer musicplayer musicplayer musicplayer"
     "footer footer footer footer footer"
     ;
+    background-color: #dcdbec;
+}
+footer{
+    grid-area: footer;
+    background-color:#e7e8f1 ;
+    height: auto;
+}
+tr{
+   height: 50px;
+  
+}
+tr:hover{
+    background-color: #f8f8fa;
+   
+}
+th{
+    text-align: left;
+}
+
+ul{
+    margin-top: 20px;
 }
 ul>li{
     display: flex;
     align-items: center;   
     margin: 5px 0;
+    font-size: 12px;
+    color:#d1d3db ;
 }
 
+span, td{
+    color:#adb5bd ;
+}
+.side-panel{
+    grid-area: sidepanel;
+    background-color: #e1e2ed;
+    padding-left: 20px;
+}
+.music-player-content{
+    grid-area:musicplayer;
+    background-color: #e7e8f1;
+}
+/* .music-player-content{
+    grid-area:musicplayer;
+} */
+
+
 .icons{
-    width: 35px;
+    height: 24px;
+    width: 24px;
 }
 .home-search-lib-links:first-child{
     margin-top: 2.5rem;
 }
 
-.song-details-container, .song-controls,.music-controls,.song-player ,.playback-features{
+.song-details-container, .song-controls,.music-controls,.song-player ,.playback-features ,.account-details{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,8 +80,7 @@ ul>li{
     flex-direction: column;
 }
 
-
-.music-control-buttons{
+.music-control-buttons , .page-controls button{
     border: none;
     outline: none;
     background-color: transparent;
@@ -65,3 +88,74 @@ ul>li{
 .music-control-buttons:hover , input[type="range"]{
     cursor: pointer;
 }
+.user-account-details{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 2px solid #C7B1EF;
+    height: 3rem;
+
+}
+
+.recommended-songs-container{
+    padding: 3% 5%;
+   
+}
+
+.recommended-songs-container h1 {
+margin-bottom: 1rem;
+}
+.music-controls,.music-player-content,.side-panel{
+    border-radius: 20px;
+    margin: 15px;
+    position: relative;
+}
+
+
+.music-list-table{
+    border-collapse: collapse;
+}
+
+
+
+
+/* Footer CSS */
+
+.volume-control{
+    position: relative;
+}
+.volume-control  input[type='range']{
+    position: absolute;
+    top :10px;
+}
+
+.audio-track  input[type='range']{
+    width: 400px;
+}
+input[type='range'] {
+
+   
+    height: 5px;
+    -webkit-appearance: none;
+    border-radius: 20px;
+    /* background-color: #c7b1f0; */
+  }
+  
+  input[type='range']::-webkit-slider-runnable-track {
+    height: 10px;
+    -webkit-appearance: none;
+    color: #c7b1f0;
+    margin-top: -1px;
+    border-radius: 20px;
+    background-color: #d1d3db;
+  }
+  
+  input[type='range']::-webkit-slider-thumb {
+    width: 10px;
+    -webkit-appearance: none;
+    height: 10px;
+    border-radius: 10px;
+    cursor: ew-resize;
+    background: #c7b1f0;
+  
+  }
