Song duration added and track values

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -193,3 +193,12 @@ input[type='range'] {
 .active-tab-main-content{
     display: block;
 }
+
+
+#Pause{
+    display: none;
+}
+
+.play-pause-button-svg{
+    transition: 1s ease;
+}
